--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-    "name": "moder-portfolio",
-    "version": "1.0.0",
-    "description": "Responsive Portfolio Website",
-    "main": "index.js",
-    "scripts": {
-        "sass": "node-sass -w scss/ -o dist/css/ --recursive"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/urielexis64/modern-portfolio.git"
-    },
-    "author": "Uriel Aispuro",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/urielexis64/modern-portfolio/issues"
-    },
-    "homepage": "https://github.com/urielexis64/modern-portfolio#readme",
-    "dependencies": {
-        "node-sass": "^4.14.0"
-    }
+	"name": "moder-portfolio",
+	"version": "1.0.0",
+	"description": "Responsive Portfolio Website",
+	"main": "index.js",
+	"homepage": "https://urielexis64.github.io/modern_portfolio",
+	"scripts": {
+		"sass": "node-sass -w scss/ -o dist/css/ --recursive",
+		"deploy": "gh-pages -d dist"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/urielexis64/modern-portfolio.git"
+	},
+	"author": "Uriel Aispuro",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/urielexis64/modern-portfolio/issues"
+	},
+	"dependencies": {
+		"gh-pages": "^2.2.0",
+		"node-sass": "^4.14.0"
+	}
 }
